--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>COTT'ART</title>
-    <link rel="stylesheet" href"https://github.com/loulouche-cott/projet-/blob/main/css"> 
+    <link rel="stylesheet" href""> 
   </head>
   <body>
   <header>
