--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
   <header>
+    <nav>
+      
+    </nav>
+    <img src="" alt"" class="">
+    <h1> COTT'ART </h1>
+    <p></p>
     
   </header>
     <footer>
