--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </nav>
     <img src="" alt"" class="">
     <h1> COTT'ART </h1>
-    <p></p>
+    <p>Entrez, Regardez, Ressentez... L'Art commence ici.</p>
     
   </header>
     <footer>
