--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
   </head>
   <body>
   <header>
+    <div>
     <nav>
-      
+      <ul>
+        <li>MENU</li>
+        <li>OEUVRES</li>
+        <li>CONTENU</li>
+        <li>CONTACT</li>
+      </ul>
     </nav>
+      <div/>
     <img src="Images/554302020_1892933014598846_2670111402951597060_n.jpg" alt"images" class="images">
     <h1> COTT'ART </h1>
     <p>Entrez, Regardez, Ressentez... L'Art commence ici.</p>
