--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li>MENU</li>
-        <li>OEUVRES</li>
+        <li>ŒUVRES</li>
         <li>CONTENU</li>
         <li>CONTACT</li>
       </ul>
