--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div/>
     <img src="" alt"images" class="images">
     <h1> COTT'ART </h1>
-    <p>Entrez, Regardez, Ressentez... L'Art commence ici.</p>
+    <p>Entrez, Regardez, Ressentez... l'Art commence ici.</p>
     
   </header>
     <footer>
