--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>COTT'ART</title>
     <link rel="stylesheet" href"css/style.css"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-  <header>
+  <header>    
     <nav>
       <ul>
         <li>MENU</li>
@@ -18,9 +19,59 @@
     <img src="" alt"images" class="images">
     <h1> COTT'ART </h1>
     <p>Entrez, Regardez, Ressentez... l'Art commence ici.</p>
-    
-  </header>
+     </header>
+    <section id="about">
+    <h2>Bienvenue dans l'univers de Costanza Francesca Carbone</h2>
+    <p>
+      Découvrez les œuvres d’une artiste italienne au style unique, explorant les émotions humaines,
+      la mythologie et la nature à travers des peintures et dessins expressifs.
+    </p>
+    <a href="#">Voir les galeries</a>
+  </section>
+     <main>
+    <section class="artwork">
+      <img src="artwork1.jpg" alt="Illustration d'une ville imaginaire">
+      <h3>Les Cités Suspendues</h3>
+      <p>Une exploration de mondes flottants entre rêve et réalité.</p>
+    </section>
+
+    <section class="artwork">
+      <img src="artwork2.jpg" alt="Dessin en noir et blanc d'une femme et d'un crâne">
+      <h3>La Dualité de l’Âme</h3>
+      <p>Entre vie et mort, la tension éternelle du souffle humain.</p>
+    </section>
+
+    <section class="artwork">
+      <img src="artwork3.jpg" alt="Femme entourée de flammes et d’émotions fortes">
+      <h3>La Naissance du Feu</h3>
+      <p>La puissance du renouveau à travers la destruction créatrice.</p>
+    </section>
+
+    <section class="artwork">
+      <img src="artwork4.jpg" alt="Mains entrelacées en noir et blanc">
+      <h3>Les Lignes du Destin</h3>
+      <p>Une étude intime sur la connexion entre les êtres.</p>
+    </section>
+  </main>
     <footer>
+      <section>
+      <h4>Contact</h4>
+      <p>Email : contact@costartgallery.com</p>
+      <p>Adresse : Rome, Italie</p>
+    </section>
+
+    <section>
+      <h4>Suivez-nous</h4>
+      <ul>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <p>&copy; 2025 CostArt Gallery — Tous droits réservés.</p>
+    </section>
       
     </footer>
   </body> 
