--- a/index.html
+++ b/index.html
@@ -21,30 +21,37 @@
     <p>Entrez, Regardez, Ressentez... l'Art commence ici.</p>
      </header>
     <section id="about">
-    <h2>Bienvenue dans l'univers de Costanza Francesca Carbone</h2>
+    <h2>Bienvenue à la Gallerie Cott'Art</h2>
     <p>
-      Découvrez les œuvres d’une artiste italienne au style unique, explorant les émotions humaines,
-      la mythologie et la nature à travers des peintures et dessins expressifs.
+     Située au coeur de la création contemporaine, la galerie Cott'Art est un espace dédié à l'expression
+      artistique sous toutes ses formes. Nous mettons en lumière des artistes émergeant et confirmés,
+      dont le travail questionne émeut et inspire.
     </p>
     <a href="#">Voir les galeries</a>
   </section>
      <main>
     <section class="artwork">
       <img src="artwork1.jpg" alt="Illustration d'une ville imaginaire">
-      <h3>Les Cités Suspendues</h3>
-      <p>Une exploration de mondes flottants entre rêve et réalité.</p>
+      <h3>Les jardins engloutis de Babylone </h3>
+      <p>Les jardins suspendus de Babylone, versions dystopique, dénonce la pollution et le déréglement climatique. Oeuvre réalisée à l'aquarelle.</p>
     </section>
 
     <section class="artwork">
       <img src="artwork2.jpg" alt="Dessin en noir et blanc d'une femme et d'un crâne">
-      <h3>La Dualité de l’Âme</h3>
-      <p>Entre vie et mort, la tension éternelle du souffle humain.</p>
+      <h3>La flèche de l'amour</h3>
+      <p>Oeuvre à l'encre de chine illustrant deux âme soeur liées pour l'éternité, unies au-delà de la mort.</p>
     </section>
 
     <section class="artwork">
       <img src="artwork3.jpg" alt="Femme entourée de flammes et d’émotions fortes">
-      <h3>La Naissance du Feu</h3>
-      <p>La puissance du renouveau à travers la destruction créatrice.</p>
+      <h3>Le bébé pharaon</h3>
+      <p>représentation dystopique de la pyramide de Khéops, cette oeuvre dénonce l'esclavagisme. réalmisée à l'encre colorée et au crayon.</p>
+    </section>
+
+    <section class="artwork">
+      <img src="artwork3.jpg" alt="Femme entourée de flammes et d’émotions fortes">
+      <h3>Le désespéré</h3>
+      <p>Oeuvre satirique inspirée du désespéré de Courbet, illustrant les catastrophes naturelles engendrées par le changement climatique. Réalisée à l'aquarelle et à l'encre.</p>
     </section>
 
     <section class="artwork">
@@ -56,7 +63,7 @@
     <footer>
       <section>
       <h4>Contact</h4>
-      <p>Email : contact@costartgallery.com</p>
+      <p>Email : contact@cottartgallery.com</p>
       <p>Adresse : Rome, Italie</p>
     </section>
 
@@ -70,7 +77,7 @@
     </section>
 
     <section>
-      <p>&copy; 2025 CostArt Gallery — Tous droits réservés.</p>
+      <p>&copy; 2025 CottArt Gallery — Tous droits réservés.</p>
     </section>
       
     </footer>
