--- a/index.html
+++ b/index.html
@@ -56,16 +56,24 @@
 
     <section class="artwork">
       <img src="artwork4.jpg" alt="Mains entrelacées en noir et blanc">
-      <h3>Les Lignes du Destin</h3>
-      <p>Une étude intime sur la connexion entre les êtres.</p>
+      <h3>Le Silence du Ciel</h3>
+      <p>Oeuvre à l'encre de Chine, explorant la chute et la légéreté à travers le mouvement d'un corps ailé.</p>
     </section>
+
+       <p>La gallerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où les artistes et visiteurs se rencontrent, échangeant et s'inspirent.</p>
   </main>
     <footer>
       <section>
       <h4>Contact</h4>
-      <p>Email : contact@cottartgallery.com</p>
-      <p>Adresse : Rome, Italie</p>
+      <p> +33 93 20 83 10 </p> 
+      <p>contact@cottartgallery.com</p>
+      <p> 98 Bd Edouard Herriot</p> 
+      <p> 06200, NICE</p>
     </section>
+
+    <section> 
+      <h4>Soyez inspiré par l'actualité Cott'Art Gallery</h4>
+    </section> 
 
     <section>
       <h4>Suivez-nous</h4>
@@ -75,6 +83,14 @@
         <li><a href="#">Twitter</a></li>
       </ul>
     </section>
+
+    <section> 
+      <ul>
+        <li> Mentions légales</li>
+        <li>Gestion des préférences</li>
+        <li>Plan du site</li>
+      </ul>
+    </section> 
 
     <section>
       <p>&copy; 2025 CottArt Gallery — Tous droits réservés.</p>
