--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 
     <section> 
       <h4>Soyez inspiré par l'actualité Cott'Art Gallery</h4>
-    </section> 
+      <input type="email" placeholder="indiquez votre adresse mail" required>
+      <button type"submit"> Envoyez</button> 
+   </section> 
 
     <section>
       <h4>Suivez-nous</h4>
