--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <li>CONTACT</li>
       </ul>
     </nav>
-    <img src="" alt"images" class="images">
+     <img src="l'angedechu.jpg" alt="images">
+     <img src="logomonimaliste.jpg" alt="images">
     <h1> COTT'ART </h1>
     <p>Entrez, Regardez, Ressentez... l'Art commence ici.</p>
      </header>
@@ -31,31 +32,31 @@
   </section>
      <main>
     <section class="artwork">
-      <img src="artwork1.jpg" alt="Illustration d'une ville imaginaire">
+      <img src="lesjardinsengloutisdebabylone.jpg" alt="images">
       <h3>Les jardins engloutis de Babylone </h3>
       <p>Les jardins suspendus de Babylone, versions dystopique, dénonce la pollution et le déréglement climatique. Oeuvre réalisée à l'aquarelle.</p>
     </section>
 
     <section class="artwork">
-      <img src="artwork2.jpg" alt="Dessin en noir et blanc d'une femme et d'un crâne">
+      <img src="laflechedel'amour.jpg" alt="images">
       <h3>La flèche de l'amour</h3>
       <p>Oeuvre à l'encre de chine illustrant deux âme soeur liées pour l'éternité, unies au-delà de la mort.</p>
     </section>
 
     <section class="artwork">
-      <img src="artwork3.jpg" alt="Femme entourée de flammes et d’émotions fortes">
+      <img src="lebebepharaon.jpg" alt="images">
       <h3>Le bébé pharaon</h3>
       <p>représentation dystopique de la pyramide de Khéops, cette oeuvre dénonce l'esclavagisme. réalmisée à l'encre colorée et au crayon.</p>
     </section>
 
     <section class="artwork">
-      <img src="artwork3.jpg" alt="Femme entourée de flammes et d’émotions fortes">
+      <img src="ledesespere" alt="images">
       <h3>Le désespéré</h3>
       <p>Oeuvre satirique inspirée du désespéré de Courbet, illustrant les catastrophes naturelles engendrées par le changement climatique. Réalisée à l'aquarelle et à l'encre.</p>
     </section>
 
     <section class="artwork">
-      <img src="artwork4.jpg" alt="Mains entrelacées en noir et blanc">
+      <img src="lesilenceduciel.jpg" alt="images">
       <h3>Le Silence du Ciel</h3>
       <p>Oeuvre à l'encre de Chine, explorant la chute et la légéreté à travers le mouvement d'un corps ailé.</p>
     </section>
