--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>CONTACT</li>
       </ul>
     </nav>
-     <img src="l'angedechu.jpg" alt="images">
+     <img src="https://github.com/loulouche-cott/projet-/blob/main/Images/l'angedechu.jpg" alt="images">
      <img src="logomonimaliste.jpg" alt="images">
     <h1> COTT'ART </h1>
     <p>Entrez, Regardez, Ressentez... l'Art commence ici.</p>
