--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="artwork">
       <img src="laflechedel'amour.jpg" alt="images">
       <h3>La flèche de l'amour</h3>
-      <p>Oeuvre à l'encre de chine illustrant deux âme soeur liées pour l'éternité, unies au-delà de la mort.</p>
+      <p>Œuvre à l'encre de chine illustrant deux âme soeur liées pour l'éternité, unies au-delà de la mort.</p>
     </section>
 
     <section class="artwork">
