--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     <section class="artwork">
       <img src="ledesespere" alt="images">
       <h3>Le désespéré</h3>
-      <p>Oeuvre satirique inspirée du désespéré de Courbet, illustrant les catastrophes naturelles engendrées par le changement climatique. Réalisée à l'aquarelle et à l'encre.</p>
+      <p>Œuvre satirique inspirée du désespéré de Courbet, illustrant les catastrophes naturelles engendrées par le changement climatique. Réalisée à l'aquarelle et à l'encre.</p>
     </section>
 
     <section class="artwork">
       <img src="lesilenceduciel.jpg" alt="images">
       <h3>Le Silence du Ciel</h3>
-      <p>Oeuvre à l'encre de Chine, explorant la chute et la légéreté à travers le mouvement d'un corps ailé.</p>
+      <p>Œuvre à l'encre de Chine, explorant la chute et la légéreté à travers le mouvement d'un corps ailé.</p>
     </section>
 
        <p>La gallerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où les artistes et visiteurs se rencontrent, échangeant et s'inspirent.</p>
@@ -66,10 +66,10 @@
     <footer>
       <section>
       <h4>Contact</h4>
-      <p> +33 93 20 83 10 </p> 
+      <p>+33 93 20 83 10 </p> 
       <p>contact@cottartgallery.com</p>
-      <p> 98 Bd Edouard Herriot</p> 
-      <p> 06200, NICE</p>
+      <p>98 Bd Edouard Herriot</p> 
+      <p>06200, NICE</p>
     </section>
 
     <section> 
