--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>COTT'ART</title>
-    <link rel="stylesheet" href"css.css"> 
+    <link rel="stylesheet" href="css.css"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
