--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <footer>
       <section>
       <h4>Contact</h4>
-      <p>+33 93 20 83 10 </p> 
-      <p>contact@cottartgallery.com</p>
+      <p>+33 4 93 20 83 10</p> 
+      <p>cottartgalerie@gmail.com</p>
       <p>98 Bd Edouard Herriot</p> 
       <p>06200, NICE</p>
     </section>
