--- a/cottart.html
+++ b/cottart.html
@@ -32,31 +32,31 @@
   </section>
      <main>
     <section class="artwork">
-      <img src="lesjardinsengloutisdebabylone.jpg" alt="images">
+      <img src="Images/lesjardinsengloutisdebabylone.jpg" alt="images">
       <h3>Les jardins engloutis de Babylone </h3>
       <p>Les jardins suspendus de Babylone, versions dystopique, dénonce la pollution et le déréglement climatique. Oeuvre réalisée à l'aquarelle.</p>
     </section>
 
     <section class="artwork">
-      <img src="laflechedel'amour.jpg" alt="images">
+      <img src="Images/laflechedel'amour.jpg" alt="images">
       <h3>La flèche de l'amour</h3>
       <p>Œuvre à l'encre de chine illustrant deux âme soeur liées pour l'éternité, unies au-delà de la mort.</p>
     </section>
 
     <section class="artwork">
-      <img src="lebebepharaon.jpg" alt="images">
+      <img src="Images/lebebepharaon.jpg" alt="images">
       <h3>Le bébé pharaon</h3>
       <p>représentation dystopique de la pyramide de Khéops, cette oeuvre dénonce l'esclavagisme. réalmisée à l'encre colorée et au crayon.</p>
     </section>
 
     <section class="artwork">
-      <img src="ledesespere" alt="images">
+      <img src="Images/ledesespere" alt="images">
       <h3>Le désespéré</h3>
       <p>Œuvre satirique inspirée du désespéré de Courbet, illustrant les catastrophes naturelles engendrées par le changement climatique. Réalisée à l'aquarelle et à l'encre.</p>
     </section>
 
     <section class="artwork">
-      <img src="lesilenceduciel.jpg" alt="images">
+      <img src="Images/lesilenceduciel.jpg" alt="images">
       <h3>Le Silence du Ciel</h3>
       <p>Œuvre à l'encre de Chine, explorant la chute et la légéreté à travers le mouvement d'un corps ailé.</p>
     </section>
