--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>COTT'ART</title>
-    <link rel="stylesheet" href="css.css"> 
+    <link rel="stylesheet" href="cottart.css"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -16,7 +16,7 @@
         <li>CONTACT</li>
       </ul>
     </nav>
-     <img src="Images/l'angedechu.jpg" alt="images">
+     <img src="Images/angedechu.jpg" alt="images">
      <img src="logomonimaliste.jpg" alt="images">
     <h1> COTT'ART </h1>
     <p>Entrez, Regardez, Ressentez... l'Art commence ici.</p>
@@ -38,7 +38,7 @@
     </section>
 
     <section class="artwork">
-      <img src="Images/laflechedel'amour.jpg" alt="images">
+      <img src="Images/laflechedelamour.jpg" alt="images">
       <h3>La flèche de l'amour</h3>
       <p>Œuvre à l'encre de chine illustrant deux âme soeur liées pour l'éternité, unies au-delà de la mort.</p>
     </section>
