--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
   <header>    
-    <nav>
+     <img src="Images/angedechu.jpg" alt="images">
+     <nav>
       <ul>
         <li>MENU</li>
         <li>ŒUVRES</li>
@@ -16,7 +17,6 @@
         <li>CONTACT</li>
       </ul>
     </nav>
-     <img src="Images/angedechu.jpg" alt="images">
      <img src="logomonimaliste.jpg" alt="images">
     <h1> COTT'ART </h1>
     <p>Entrez, Regardez, Ressentez... l'Art commence ici.</p>
@@ -50,7 +50,7 @@
     </section>
 
     <section class="artwork">
-      <img src="Images/ledesespere" alt="images">
+      <img src="Images/ledespere.jpg" alt="iamges">
       <h3>Le désespéré</h3>
       <p>Œuvre satirique inspirée du désespéré de Courbet, illustrant les catastrophes naturelles engendrées par le changement climatique. Réalisée à l'aquarelle et à l'encre.</p>
     </section>
