--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>CONTACT</li>
       </ul>
     </nav>
-     <img src="logomonimaliste.jpg" alt="images">
+     <img src="Images/logominimaliste.png" alt="images">
     <h1> COTT'ART </h1>
     <p>Entrez, Regardez, Ressentez... l'Art commence ici.</p>
      </header>
