--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
 
     <section class="artwork">
-      <img src="Images/ledesespere.jpg" alt="iamges">
+      <img src="Images/ledesespere.jpg" alt="images">
       <h3>Le désespéré</h3>
       <p>Œuvre satirique inspirée du désespéré de Courbet, illustrant les catastrophes naturelles engendrées par le changement climatique. Réalisée à l'aquarelle et à l'encre.</p>
     </section>
