--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="about">
     <h2>Bienvenue à la Gallerie Cott'Art</h2>
     <p>
-     Située au coeur de la création contemporaine, la galerie Cott'Art est un espace dédié à l'expression
+     Située au coeur de la création contemporaine, la Galerie Cott'Art est un espace dédié à l'expression
       artistique sous toutes ses formes. Nous mettons en lumière des artistes émergeant et confirmés,
       dont le travail questionne émeut et inspire.
     </p>
