--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
     <section class="artwork">
       <img src="Images/lesjardinsengloutisdebabylone.jpg" alt="images">
       <h3>Les jardins engloutis de Babylone </h3>
-      <p>Les jardins suspendus de Babylone, versions dystopique, dénonce la pollution et le déréglement climatique. Oeuvre réalisée à l'aquarelle.</p>
+      <p>Les jardins suspendus de Babylone, versions dystopique, dénonce la pollution et le déréglement climatique. Œuvre réalisée à l'aquarelle.</p>
     </section>
 
     <section class="artwork">
       <img src="Images/laflechedelamour.jpg" alt="images">
       <h3>La flèche de l'amour</h3>
-      <p>Œuvre à l'encre de chine illustrant deux âme soeur liées pour l'éternité, unies au-delà de la mort.</p>
+      <p>Œuvre à l'encre de chine illustrant deux âme soeurs liées pour l'éternité, unies au-delà de la mort.</p>
     </section>
 
     <section class="artwork">
       <img src="Images/lebebepharaon.jpg" alt="images">
       <h3>Le bébé pharaon</h3>
-      <p>représentation dystopique de la pyramide de Khéops, cette oeuvre dénonce l'esclavagisme. réalmisée à l'encre colorée et au crayon.</p>
+      <p>Représentation dystopique de la pyramide de Khéops, cette œuvre dénonce l'esclavagisme. Réalmisée à l'encre colorée et au crayon.</p>
     </section>
 
     <section class="artwork">
       <img src="Images/ledesespere.jpg" alt="images">
       <h3>Le désespéré</h3>
-      <p>Œuvre satirique inspirée du désespéré de Courbet, illustrant les catastrophes naturelles engendrées par le changement climatique. Réalisée à l'aquarelle et à l'encre.</p>
+      <p>Œuvre satirique inspirée du Désespéré de Courbet, illustrant les catastrophes naturelles engendrées par le changement climatique. Réalisée à l'aquarelle et à l'encre.</p>
     </section>
 
     <section class="artwork">
@@ -61,7 +61,7 @@
       <p>Œuvre à l'encre de Chine, explorant la chute et la légéreté à travers le mouvement d'un corps ailé.</p>
     </section>
 
-       <p>La gallerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où les artistes et visiteurs se rencontrent, échangeant et s'inspirent.</p>
+       <p>La Gallerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où les artistes et visiteurs se rencontrent, échangeant et s'inspirent.</p>
   </main>
     <footer>
       <section>
