--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>COTT'ART</title>
-    <link rel="stylesheet" href="cottart.css"> 
+    <link rel="stylesheet" href="cottart.css">
+    <link rel="Images/logominimaliste" alt="images">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
