--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
     </section>
 
     <section> 
-      <h4>Soyez inspiré par l'actualité Cott'Art Gallery</h4>
-      <input type="email" placeholder="indiquez votre adresse mail" required>
-      <button type"submit"> Envoyez</button> 
+      <h4>Soyez inspiré par l'actualité Cott'Art Gallery :</h4>
+      <input type="email" placeholder="Indiquez votre adresse mail" required>
+      <button type"submit"> Envoyer</button> 
    </section> 
 
     <section>
       <h4>Suivez-nous</h4>
       <ul>
         <li><a href="#">Instagram</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
+        <li><a href="#">FaceBook</a></li>
+        <li><a href="#">LinkedIn</a></li>
       </ul>
     </section>
 
