--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <ul>
         <li>MENU</li>
         <li>ŒUVRES</li>
-        <li>CONTENU</li>
+        <li>CONTENUS</li>
         <li>CONTACT</li>
       </ul>
     </nav>
