--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>COTT'ART</title>
     <link rel="stylesheet" href="cottart.css">
-    <link rel="shortcut icon" href="Images/logominimaliste">
+    <link rel="shortcut icon" href="Images/logominimaliste" alt="images">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
