--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <section> 
       <h4>Soyez inspiré par l'actualité Cott'Art Gallery :</h4>
-      <input type="email" placeholder="Indiquez votre adresse mail" required>
+      <input type="email" placeholder="Indiquez votre adresse e-mail" required>
       <button type"submit"> Envoyer</button> 
    </section> 
 
