--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>MENU</li>
         <li>ŒUVRES</li>
         <li>CONTENUS</li>
-        <li>CONTACT</li>
+        <li>CONTACTS</li>
       </ul>
     </nav>
      <img src="Images/logominimaliste.png" alt="images">
@@ -35,7 +35,7 @@
     <section class="artwork">
       <img src="Images/lesjardinsengloutisdebabylone.jpg" alt="images">
       <h3>Les jardins engloutis de Babylone </h3>
-      <p>Les jardins suspendus de Babylone, versions dystopique, dénonce la pollution et le déréglement climatique. Œuvre réalisée à l'aquarelle.</p>
+      <p>Les jardins suspendus de Babylone, dans une version dystopique, dénoncent la pollution et le déréglement climatique. Œuvre réalisée à l'aquarelle.</p>
     </section>
 
     <section class="artwork">
@@ -66,7 +66,7 @@
   </main>
     <footer>
       <section>
-      <h4>Contact</h4>
+      <h4>Contacts</h4>
       <p>+33 4 93 20 83 10</p> 
       <p>cottartgalerie@gmail.com</p>
       <p>98 Bd Edouard Herriot</p> 
