--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
      <img src="Images/logominimaliste.png" alt="images">
     <h1> COTT'ART </h1>
-    <p>Entrez, Regardez, Ressentez... l'Art commence ici.</p>
+    <p>Entrez, Regardez, Ressentez... L'Art commence ici.</p>
      </header>
     <section id="about">
     <h2>Bienvenue à la Gallerie Cott'Art</h2>
