--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="artwork">
       <img src="Images/lebebepharaon.jpg" alt="images">
       <h3>Le bébé pharaon</h3>
-      <p>Représentation dystopique de la pyramide de Khéops, cette œuvre dénonce l'esclavagisme. Réalmisée à l'encre colorée et au crayon.</p>
+      <p>Représentation dystopique de la pyramide de Khéops, cette œuvre dénonce l'esclavagisme. Réalisée à l'encre colorée et au crayon.</p>
     </section>
 
     <section class="artwork">
