--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section> 
 
     <section>
-      <p>&copy; 2025 CottArt Gallery — Tous droits réservés.</p>
+      <p>&copy; 2025 Cott'Art Gallery — Tous droits réservés.</p>
     </section>
       
     </footer>
