--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       artistique sous toutes ses formes. Nous mettons en lumière des artistes émergeant et confirmés,
       dont le travail questionne émeut et inspire.
     </p>
-    <a href="#">Oeuvre phare</a>
+    <a href="#">Œuvre phare</a>
   </section>
      <main>
     <section class="artwork">
