Fix grammatical errors in index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h2>Bienvenue à la Gallerie Cott'Art</h2>
     <p>
      Située au coeur de la création contemporaine, la Galerie Cott'Art est un espace dédié à l'expression
-      artistique sous toutes ses formes. Nous mettons en lumière des artistes émergeant et confirmés,
+      artistique sous toutes ses formes. Nous mettons en lumière des artistes émergeants et confirmés,
       dont le travail questionne émeut et inspire.
     </p>
     <a href="#">Œuvre phare</a>
@@ -62,7 +62,7 @@
       <p>Œuvre à l'encre de Chine, explorant la chute et la légéreté à travers le mouvement d'un corps ailé.</p>
     </section>
 
-       <p>La Gallerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où les artistes et visiteurs se rencontrent, échangeant et s'inspirent.</p>
+       <p>La Gallerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où les artistes et visiteurs se rencontrent, échangent et s'inspirent.</p>
   </main>
     <footer>
       <section>
@@ -70,7 +70,7 @@
       <p>+33 4 93 20 83 10</p> 
       <p>cottartgalerie@gmail.com</p>
       <p>98 Bd Edouard Herriot</p> 
-      <p>06200, Nice</p>
+      <p>06200 Nice</p>
     </section>
 
     <section> 
