--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-  <header>    
-     <img src="Images/angedechu.jpg" alt="images">
-     <nav>
+  <header> 
+  <div class="container1">  
+     <img src="Images/logominimaliste.png" alt="images" class="logo">
+    <nav>
       <ul>
         <li>MENU</li>
         <li>ŒUVRES</li>
@@ -18,10 +19,14 @@
         <li>CONTACTS</li>
       </ul>
     </nav>
-     <img src="Images/logominimaliste.png" alt="images">
-    <h1> COTT'ART </h1>
+  </div> 
+
+  <div class="container2">
+     <h1> COTT'ART Gallery </h1>
     <p>Entrez, Regardez, Ressentez... L'Art commence ici.</p>
-     </header>
+  </div>
+  </header>
+
     <section id="about">
     <h2>Bienvenue à la Gallerie Cott'Art</h2>
     <p>
@@ -29,10 +34,12 @@
       artistique sous toutes ses formes. Nous mettons en lumière des artistes émergeants et confirmés,
       dont le travail questionne émeut et inspire.
     </p>
-    <a href="#">Œuvre phare</a>
+    
   </section>
      <main>
+      <div class="grid">
     <section class="artwork">
+       <button type="button">Oeuvre phare</button>
       <img src="Images/lesjardinsengloutisdebabylone.jpg" alt="images">
       <h3>Les jardins engloutis de Babylone </h3>
       <p>Les jardins suspendus de Babylone, dans une version dystopique, dénoncent la pollution et le déréglement climatique. Œuvre réalisée à l'aquarelle.</p>
@@ -61,7 +68,7 @@
       <h3>Le Silence du Ciel</h3>
       <p>Œuvre à l'encre de Chine, explorant la chute et la légéreté à travers le mouvement d'un corps ailé.</p>
     </section>
-
+</div>
        <p>La Gallerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où les artistes et visiteurs se rencontrent, échangent et s'inspirent.</p>
   </main>
     <footer>
