--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <section> 
       <h4>Soyez inspiré par l'actualité Cott'Art Gallery :</h4>
-      <input type="email" placeholder="*E-mail" required>
+      <input type="email" placeholder="E-mail" required>
       <button type"submit"> Envoyer</button> 
    </section> 
 
