--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <p>+33 4 93 20 83 10</p> 
       <p>cottartgalerie@gmail.com</p>
       <p>98 Bd Edouard Herriot</p> 
-      <p>06200 Nice</p>
+      <p>06 200 Nice</p>
     </section>
 
     <section> 
