--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      <main>
       <div class="grid">
     <section class="artwork">
-       <button type="button">Oeuvre phare</button>
+       <button type="button">Œuvre phare</button>
       <img src="Images/lesjardinsengloutisdebabylone.jpg" alt="images">
       <h3>Les jardins engloutis de Babylone </h3>
       <p>Les jardins suspendus de Babylone, dans une version dystopique, dénoncent la pollution et le déréglement climatique. Œuvre réalisée à l'aquarelle.</p>
