--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <p>Œuvre à l'encre de Chine, explorant la chute et la légéreté à travers le mouvement d'un corps ailé.</p>
     </section>
 </div>
-       <p>La Gallerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où les artistes et visiteurs se rencontrent, échangent et s'inspirent.</p>
+       <p>La Galerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où les artistes et visiteurs se rencontrent, échangent et s'inspirent.</p>
   </main>
     <footer>
       <section>
