--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </header>
 
     <section id="about">
-    <h2>Bienvenue à la Gallerie Cott'Art</h2>
+    <h2>Bienvenue à la Galerie Cott'Art</h2>
     <p>
      Située au coeur de la création contemporaine, la Galerie Cott'Art est un espace dédié à l'expression
       artistique sous toutes ses formes. Nous mettons en lumière des artistes émergeants et confirmés,
