Add links to navigation menu and section IDs

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
      <img src="Images/logominimaliste.png" alt="images" class="logo">
     <nav>
       <ul>
-        <li>MENU</li>
-        <li>ŒUVRES</li>
-        <li>CONTENUS</li>
-        <li>CONTACTS</li>
+       <li><a href="#MENU">MENU</a></li>
+        <li><a href="#OEUVRES">OEUVRES</a></li>
+       <li><a href="#CONTENUS">CONTENUS</a></li>
+       <li><a href="#CONTACTS">CONTACTS</a></li>
       </ul>
     </nav>
   </div> 
 
-  <div class="container2">
+  <div class="container2" id="MENU">
      <h1> COTT'ART Gallery </h1>
     <p>Entrez, Regardez, Ressentez... L'Art commence ici.</p>
   </div>
@@ -37,7 +37,7 @@
     
   </section>
      <main>
-      <div class="grid">
+      <div class="grid" id="OEUVRES" id="CONTENUS">
          <button type="button">Œuvre phare</button>
     <section class="artwork">
       <img src="Images/lesjardinsengloutisdebabylone.jpg" alt="images">
@@ -71,7 +71,7 @@
 </div>
        <p>La Galerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où les artistes et visiteurs se rencontrent, échangent et s'inspirent.</p>
   </main>
-    <footer>
+    <footer id="CONTACTS">
       <section>
       <h4>Contacts</h4>
       <p>+33 4 93 20 83 10</p> 
