--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
   </section>
      <main>
-      <div class="grid" id="OEUVRES" id="CONTENUS">
+      <div class="grid" id="OEUVRES">
          <button type="button">Œuvre phare</button>
     <section class="artwork">
       <img src="Images/lesjardinsengloutisdebabylone.jpg" alt="images">
@@ -51,7 +51,7 @@
       <p>Œuvre à l'encre de chine illustrant deux âme soeurs liées pour l'éternité, unies au-delà de la mort.</p>
     </section>
 
-    <section class="artwork">
+    <section class="artwork" id="CONTENUS">
       <img src="Images/lebebepharaon.jpg" alt="images">
       <h3>Le bébé pharaon</h3>
       <p>Représentation dystopique de la pyramide de Khéops, cette œuvre dénonce l'esclavagisme. Réalisée à l'encre colorée et au crayon.</p>
