--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html!>
+<!DOCTYPE html!>
 <html>
   <head>
     <meta charset="utf-8">
@@ -83,7 +83,7 @@
     <section> 
       <h4>Soyez inspiré par l'actualité Cott'Art Gallery :</h4>
       <input type="email" placeholder="*E-mail" required>
-      <button type"submit"> Envoyer</button> 
+      <button type="submit"> Envoyer</button> 
    </section> 
 
     <section>
