--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="#MENU">MENU</a></li>
-                <li><a href="#OEUVRES">OEUVRES</a></li>
+                <li><a href="#ŒUVRES">ŒUVRES</a></li>
                 <li><a href="#CONTENUS">CONTENUS</a></li>
                 <li><a href="#CONTACTS">CONTACTS</a></li>
             </ul>
@@ -51,7 +51,7 @@
         <button type="button">Œuvre phare</button>
     </div>
 
-    <div class="grid" id="OEUVRES">
+    <div class="grid" id="ŒUVRES">
 
         <section class="artwork">
             <img src="Images/lesjardinsengloutisdebabylone.jpg" alt="Les jardins engloutis de Babylone">
