--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </div>
 
     <div class="container2" id="MENU">
-        <h1>COTT'ART Gallery</h1>
-        <p>Entrez, Regardez, Ressentez... L'Art commence ici.</p>
+        <h1>COTT'ART Galery</h1>
+        <p>Entrez, Regardez, Resentez... L'Art commence ici.</p>
     </div>
 </header>
 
