--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- ŒUVRE PHARE + GALERIE -->
 <main>
 
-    <!-- Bouton Œuvre phare  -->
+    <!-- Bouton Œuvre Phare  -->
     <div class="featured">
         <button type="button">Œuvre phare</button>
     </div>
