--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p>
         Située au cœur de la création contemporaine, la Galerie Cott'Art est un espace dédié à l'expression
         artistique sous toutes ses formes. Nous mettons en lumière des artistes émergents et confirmés,
-        dont le travail questione, émeut et inspire.
+        dont le travail questionne, émeut et inspire.
     </p>
 </section>
 
