--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- ŒUVRE PHARE + GALERIE -->
 <main>
 
- <!-- Bouton Œuvre Phare  -->
+ <!-- BOUTON ŒUVRE PHARE  -->
     <div class="featured">
         <button type="button">Œuvre phare</button>
     </div>
