--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="container2" id="MENU">
-        <h1>COTT'ART Gallery</h1>
+        <h1>Cott'Art Gallery</h1>
         <p>Entrez, Regardez, Ressentez... L'Art commence ici.</p>
     </div>
 </header>
