--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>COTT'ART</title>
     <link rel="stylesheet" href="cottart.css">
     <link rel="shortcut icon" href="Images/logominimaliste.png" type="image/png">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="cottart.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
